<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/texture">

    <Button
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="SinglePlayerGame"
        android:text="@string/single_player"/>

    <Button
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="MultiPlayerGame"
        android:text="@string/multiplayer"/>

    <Button
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="showOptions"
        android:text="@string/options"/>
    <Button
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="exitGame"
        android:text="@string/exit_game"/>
</LinearLayout>