<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/texture">

    <TextView
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/select_map"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center"
        android:id="@+id/activity_select_map"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/map_list"
            android:background="#330000FF"
            android:choiceMode="singleChoice"
            android:drawSelectorOnTop="true"
            android:scrollbarStyle="outsideOverlay"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="15dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <SurfaceView
                android:id="@+id/map_preview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/map_player_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/map_size"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <Button
                android:fontFamily="sans-serif-medium"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:onClick="SelectMap"
                android:text="@string/select"/>

            <Button
                android:fontFamily="sans-serif-medium"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:onClick="finishActivity"
                android:text="@string/cancel"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
